layout bugs fixed

--- a/Layout/style/header.css
+++ b/Layout/style/header.css
@@ -1,32 +1,27 @@
 header {
     background-color: #CE6AFD;
-    height: 50px;
     border-bottom: 1px solid #B8B8B8;
 }
 .header-left {
     display: flex;
 }
-/* .header-right {
-
-} */
 .header-item:hover {
     background-color: #D782FF;
-    height: 50px;
 }
-.header-item-tab {
+.header-item a {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 180px;
     height: 50px;
-}
-.header-item-tab a {
     text-decoration: none;
 }
-.header-item-tab .user {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.header-item.home img {
+    width: 32px;
+    height: 32px;
+}
+.header-item.home a {
+    width: 50px;
 }
 .circle {
     display: flex;
@@ -44,19 +39,6 @@ header {
 .user-settings {
     display: flex;
     align-items: center;
-}
-/* .header-item-user {
-    display: flex;
-    width: 180px;
-} */
-.header-item-home {
-    box-sizing: border-box;
-    height: 50px;
-    padding: 9px;
-}
-.header-item-home a img {
-    width: 32px;
-    height: 32px;
 }
 .user-settings img {
     width: 15px;
