--- a/src/style/table-item.css
+++ b/src/style/table-item.css
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-left: 16px;
     height: 70px;
 }
 .table-item-left .head {
